@@ -328,7 +328,14 @@ argument_list|)
 block|,
 name|tf
 argument_list|(
-literal|"fourier"
+literal|"fourblah"
+argument_list|,
+literal|1
+argument_list|)
+block|,
+name|tf
+argument_list|(
+literal|"fourteen"
 argument_list|,
 literal|1
 argument_list|)
@@ -337,14 +344,21 @@ name|tf
 argument_list|(
 literal|"four"
 argument_list|,
-literal|1
+literal|0.5f
+argument_list|)
+block|,
+name|tf
+argument_list|(
+literal|"fourier"
+argument_list|,
+literal|0.5f
 argument_list|)
 block|,
 name|tf
 argument_list|(
 literal|"fourty"
 argument_list|,
-literal|1
+literal|0.5f
 argument_list|)
 block|,
 name|tf
@@ -455,6 +469,48 @@ argument_list|,
 literal|"one/0.0"
 argument_list|,
 literal|"oneness/1.0"
+argument_list|)
+expr_stmt|;
+comment|// 'four' is collected in a bucket and then again as an exact match.
+name|assertMatchEquals
+argument_list|(
+name|lookup
+operator|.
+name|lookup
+argument_list|(
+literal|"four"
+argument_list|,
+literal|true
+argument_list|,
+literal|2
+argument_list|)
+argument_list|,
+literal|"four/0.0"
+argument_list|,
+literal|"fourblah/1.0"
+argument_list|)
+expr_stmt|;
+comment|// Check reordering of exact matches.
+name|assertMatchEquals
+argument_list|(
+name|lookup
+operator|.
+name|lookup
+argument_list|(
+literal|"four"
+argument_list|,
+literal|true
+argument_list|,
+literal|4
+argument_list|)
+argument_list|,
+literal|"four/0.0"
+argument_list|,
+literal|"fourblah/1.0"
+argument_list|,
+literal|"fourteen/1.0"
+argument_list|,
+literal|"fourier/0.0"
 argument_list|)
 expr_stmt|;
 name|lookup
